--- a/modules/net/src/Heal.Net.AuthServer/Pages/Index.cshtml
+++ b/modules/net/src/Heal.Net.AuthServer/Pages/Index.cshtml
@@ -1,13 +1,17 @@
 ﻿@page
 @using Heal.Net.Domain.Shared.Localization
-@using Heal.Net.HttpApi.Host.Pages
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.AspNetCore.Http.Extensions
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Volo.Abp.Account.Localization
+@using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Alert
+@using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Card
+@using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Dropdown
+@using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Grid
 @using Volo.Abp.Users
 @using Volo.Abp.AspNetCore.Mvc.UI.Theming
 @using Volo.Abp.Ui.Branding
-@model IndexModel
+@model Heal.Net.AuthServer.Pages.IndexModel
 @inject IHtmlLocalizer<HealResource> L
 @inject IHtmlLocalizer<AccountResource> AccountLocalizer
 @inject ICurrentUser CurrentUser
