feat:add HealDomainSharedModule

--- a/modules/net/src/Heal.Net.AuthServer/Pages/Index.cshtml
+++ b/modules/net/src/Heal.Net.AuthServer/Pages/Index.cshtml
@@ -12,7 +12,7 @@
 @using Volo.Abp.AspNetCore.Mvc.UI.Theming
 @using Volo.Abp.Ui.Branding
 @model Heal.Net.AuthServer.Pages.IndexModel
-@inject IHtmlLocalizer<HealResource> L
+@inject IHtmlLocalizer<HealNetResource> L
 @inject IHtmlLocalizer<AccountResource> AccountLocalizer
 @inject ICurrentUser CurrentUser
 @inject IBrandingProvider BrandingProvider
