--- a/modules/net/src/Heal.Net.AuthServer/Pages/Index.cshtml
+++ b/modules/net/src/Heal.Net.AuthServer/Pages/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@using Heal.Net.Domain.Shared.Localization
+@using Heal.Domain.Shared.Localization
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.AspNetCore.Http.Extensions
 @using Microsoft.AspNetCore.Mvc.TagHelpers
@@ -12,7 +12,7 @@
 @using Volo.Abp.AspNetCore.Mvc.UI.Theming
 @using Volo.Abp.Ui.Branding
 @model Heal.Net.AuthServer.Pages.IndexModel
-@inject IHtmlLocalizer<HealNetResource> L
+@inject IHtmlLocalizer<HealResource> L
 @inject IHtmlLocalizer<AccountResource> AccountLocalizer
 @inject ICurrentUser CurrentUser
 @inject IBrandingProvider BrandingProvider
